NetBSD Problem Report #43056

From woods@once.weird.com  Thu Mar 25 03:36:21 2010
Return-Path: <woods@once.weird.com>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 7625F63B11D
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 25 Mar 2010 03:36:21 +0000 (UTC)
Message-Id: <m1Nudrn-002bjKC@once.weird.com>
Date: Wed, 24 Mar 2010 23:36:19 -0400 (EDT)
From: "Greg A. Woods" <woods@planix.com>
Sender: "Greg A. Woods" <woods@once.weird.com>
Reply-To: "Greg A. Woods" <woods@planix.com>
To: gnats-bugs@gnats.NetBSD.org
Subject: recent changes to device-mapper.c broke i386 "ALL" kernel
X-Send-Pr-Version: 3.95

>Number:         43056
>Category:       kern
>Synopsis:       recent changes to device-mapper.c broke i386 "ALL" kernel
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Mar 25 03:40:01 +0000 2010
>Closed-Date:    Mon Jun 07 04:02:27 +0000 2010
>Last-Modified:  Mon Jun 07 04:02:27 +0000 2010
>Originator:     Greg A. Woods
>Release:        NetBSD-current 2010/03/24-18:00EST
>Organization:
Planix, Inc.; Toronto, Ontario; Canada
>Environment:
System: NetBSD-current
Architecture: i386
Machine: i386
>Description:

cc1: warnings being treated as errors
/rest/work/woods/m-NetBSD-current/sys/dev/dm/device-mapper.c:303: warning: 'dmdestroy' defined but not used

>How-To-Repeat:

	try to build i386 "ALL" kernel

>Fix:

	something maybe like this?

--- device-mapper.c	23 Mar 2010 23:08:44 -0400	1.21
+++ device-mapper.c	24 Mar 2010 20:43:19 -0400	
@@ -59,7 +59,9 @@

 /* attach and detach routines */
 void dmattach(int);
+#ifdef _MODULE
 static int dmdestroy(void);
+#endif

 static void dm_doinit(void);

@@ -297,6 +299,7 @@
 	}
 }

+#ifdef _MODULE
 /* Destroy routine */
 static int
 dmdestroy(void)
@@ -313,6 +316,7 @@

 	return 0;
 }
+#endif

 static int
 dmopen(dev_t dev, int flags, int mode, struct lwp *l)

>Release-Note:

>Audit-Trail:
From: "Jonathan A. Kollasch" <jakllsch@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43056 CVS commit: src/sys/dev/dm
Date: Fri, 26 Mar 2010 15:46:05 +0000

 Module Name:	src
 Committed By:	jakllsch
 Date:		Fri Mar 26 15:46:05 UTC 2010

 Modified Files:
 	src/sys/dev/dm: device-mapper.c

 Log Message:
 Fix build of i386 ALL kernel with patch from Greg A. Woods in PR/43056.


 To generate a diff of this commit:
 cvs rdiff -u -r1.21 -r1.22 src/sys/dev/dm/device-mapper.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 07 Jun 2010 04:02:27 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.