Fix build of i386 ALL kernel with patch from Greg A. Woods in PR/43056.